--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=dev ./node_modules/.bin/ts-node ./server/server.ts",
     "build": "cross-env NODE_ENV=dev node ./build/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:unit": "cross-env NODE_ENV=test mocha --opts build/tests/unit/config/mocha.opts ./build/tests/unit/unit.test.js",
+    "test:integration": "cross-env NODE_ENV=test mocha --opts build/tests/integration/config/mocha.opts ./build/tests/integration/integration.test.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,13 @@
     "typescript": "^2.5.3"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.4",
+    "@types/mocha": "^2.2.44",
+    "@types/supertest": "^2.0.3",
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "supertest": "^3.0.0",
+    "testdouble": "^3.2.6",
     "ts-node": "^3.3.0"
   }
 }
